--- a/_includes/section/ourclients.njk
+++ b/_includes/section/ourclients.njk
@@ -14,7 +14,7 @@
 
        {% for client in collections.sortedClients %}
             <div class="clients col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3 border-r-0 sm:border-r border-b border-gray-900 py-12 lg:py-12 px-12 md:px-24 justify-center flex h-48 w-100">
-                <img class="clients" src="{{ client.data.img }}" alt="{{ client.data.name }}">
+                <img class="clients-img" src="{{ client.data.img }}" alt="{{ client.data.name }}">
             </div>
         {% endfor %}
 
