--- a/_includes/section/footer.njk
+++ b/_includes/section/footer.njk
@@ -31,12 +31,7 @@
             <div class="inner-margin flex flex-col">
                 
                 <div class="flex mt-8 lg:mt-8 sm:px-0">
-                    
-                    <!-- Calendly link widget begin -->
-                    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-                    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-                    <a class="btn btn-secondary" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/veblengiffen/30min'});return false;">Book a call</a>
-                    <!-- Calendly link widget end -->
+                    <a class="btn btn-secondary" href="https://forms.gle/BhV6PBCrcbfioY3L7" target="_blank">Tell Us More</a>
                 </div>
             </div>
         </div>
