--- a/_includes/section/footer.njk
+++ b/_includes/section/footer.njk
@@ -4,25 +4,17 @@
     <div class="grid-default pb-16 relative">
         <div class="col-span-12 mt-12 pt-8">
             <div class="outer-margin grid grid-cols-12">
-                <div class="col-span-12 lg:col-span-7 mb-6 inner-margin">
+                <div class="col-span-12 lg:col-span-7 mb-3 inner-margin">
                     <h2 class="text-white">
-                        Let us help you Find your angle
+                        We Should Talk
                     </h2>
                 </div>
 
                 <div class="col-span-12 sm:col-span-11 xl:col-span-9 gap-2 lg:gap-6 flex flex-col sm:flex-row mt-4 mb-6 inner-margin">
                     <p class="text-xl font-medium text-white">
-                        Increase brand affinity
+                        Talk to our team of internet natives to see if there's a fit between us
                     </p>
-                    <p class="text-xl font-medium text-white">
-                        Build customer loyalty
-                    </p>
-                    <p class="text-xl font-medium text-white">
-                        Increase conversion
-                    </p>
-                    <p class="text-xl font-medium text-white">
-                        Reduce ad spend
-                    </p>
+                    
                 </div>
             </div>
         </div>
